# c10net

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: requirements.md
src/c10net/: __main__.py  c10net.py  ch10net.py  chapter10_to_pcap.py  chapter10_to_replay.py  cli.py
src/c10net/functions/: ethernet_packet_generator.py  packet_pulser.py  progress_bar.py  setup_packet_pulse.py  transfer_header_generator.py  udp_generator.py
src/c10net/tasks/: chapter10_to_ethernet.py  data_pipe.py  parse_chapter10.py  udp_replay.py  write_to_pcap.py
src/ch10net/: Ch10ToPCAP.py  GeneratePCAP.py  ReplayPCAP.py  ch10net.py  chapter10_to_pcap.py  chapter10_to_replay.py  cli.py  parse_chapter10.py  transfer_header_generator.py  udp_generator.py
src/ch10net/functions/: ethernet_packet_generator.py  progress_bar.py
src/ch10net/tasks/: chapter10_to_ethernet.py  data_pipe.py  parse_chapter10.py  write_to_pcap.py
tests/: test_c10net.py  test_cli.py  test_data_pipe.py  test_packet_pulser.py  test_parse_chapter10.py  test_progress_bar.py  test_udp_transfer_headers.py
