[project]
name = "c10net"
version = "0.0.1"
authors = [
    { name="Stephen Frees", email="sfrees@avtest.com" }
]
description = "Python utility to make Chapter 10/11 file packets available to network tools or replay as UDP packets."
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing :: Traffic Generation",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "bitarray>=3.8.0",
    "bitstring>=4.3.1",
    "bitstruct>=8.11.0",
    "colorama>=0.4.6",
    "editables>=0.5",
    "iniconfig>=2.3.0",
    "packaging>=26.0",
    "pluggy>=1.6.0",
    "pychapter10>=1.1.19",
    "Pygments>=2.19.2",
    "pytimedinput>=2.0.1",
    "scapy>=2.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]
dev = [
    "pdm_backend>=2.4.7",
]
all = [
    "c10net[test]",
    "c10net[dev]",
]

[project.urls]
Homepage = "https://github.com/atac/c10net"
Issues = "https://github.com/atac/c10net/issues"
Repository = "https://github.com/atac/c10net.git"
Documentation = "https://github.com/atac/c10net/blob/main/README.md"

[project.scripts]
c10net = "c10net:__main__"

[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
